# nixplain

./: .gitignore  SPEC.md  flake.nix  pyproject.toml
example/: ssh-bare.nix  ssh.nix
nix-why/: Cargo.toml  build.rs
nix-why/src/: main.rs  model.rs  output.rs
nix-why/src/prompts/: chatml.txt  gemma.txt
src/hatc/: __init__.py  annotator.py  cli.py  compiler.py  nixf.py
src/nixplain/: __init__.py  cli.py  compiler.py  enricher.py  extractor.py  injector.py  models.py  parser.py
tests/: test_annotator.py  test_compiler.py  test_enricher.py  test_extractor.py  test_injector.py  test_nixf.py  test_parser.py
