[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hatc"
version = "0.1.0"
description = "HATC — Human-Agent Teaming Comments toolchain"
requires-python = ">=3.11"
dependencies = ["click>=8.0"]

[project.scripts]
hatc = "hatc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
